Fix user avatar vertical alignments

--- a/src/modules/core/components/UserAvatar/UserAvatar.css
+++ b/src/modules/core/components/UserAvatar/UserAvatar.css
@@ -1,5 +1,4 @@
 .main {
-  display: inline-block;
   line-height: 0;
 }
 
